# spectre

./: .env.example  LICENSE  README.md  crawler.py  main.py  pipedrive_latest.json  pyproject.toml  spectre_analysis.json
.cursor/rules/: async-io.mdc  structure.mdc
config/: settings.py
core/: __init__.py  orchestrator.py  schema.py
modules/: __init__.py  base.py  financial.py  ip.py  pestel.py  porters.py  sentiment.py  vrio.py
tests/unit/: test_financial.py  test_ip.py  test_pestel.py  test_porters.py  test_sentiment.py  test_task_queue.py  test_vrio.py
tools/: basic-info.py  edgar-tools.py  porters-analysis.py  spectre_analysis.json
utils/: __init__.py  agent_debug_log.py  logger.py  proxy.py  rate_limiter.py  task_queue.py
